--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h1,h2,h3,h4,h5,h6{
 #content{
     width:700px;
     margin-top: 80px;
-    margin-bottom: 213px;
+    margin-bottom: 80px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -91,7 +91,7 @@ button{
     font-size: 24px;
     margin-top: 3px;
     color: #FFFFFF;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 
